Bug 488494 - Meta key does not open the application launcher for the first login of a new user
Summary: Meta key does not open the application launcher for the first login of a new ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 6.1.0
Platform: Fedora RPMs Linux
: HI major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-06-14 11:15 UTC by Alessandro Astone
Modified: 2024-06-17 14:55 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alessandro Astone 2024-06-14 11:15:42 UTC
SUMMARY
Meta key does not open the application launcher for the first login of a new user, but it starts working after a logout-login cycle.

STEPS TO REPRODUCE
1. Create a new user, log-in
2. Press the meta key

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
The application launcher in the default panel opens

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Fedora KDE Rawhide
(available in About System)
KDE Plasma Version: 6.1.0 packager tarballs
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.1

ADDITIONAL INFORMATION
Comment 1 fanzhuyifan 2024-06-14 15:03:05 UTC
Can reproduce. The shortcut is unassigned in system settings.

Operating System: Arch Linux 
KDE Plasma Version: 6.0.90
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.1
Kernel Version: 6.9.3-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i9-13900H
Memory: 15.2 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Zephyrus G16 GU603VV_GU603VV
System Version: 1.0
Comment 2 Nate Graham 2024-06-14 16:38:22 UTC
Is it unassigned, or disabled by default?

Regardless, in addition to fixing this, I think we also need to rethink where exactly the shortcut is applied. Currently it can live on the widget itself or in a global-scope "Activate Application Launcher Widget" action. I think it woul dbe best if we deleted that action and had these widgets set the Meta key as the launch shortcut on themselves.
Comment 3 fanzhuyifan 2024-06-14 16:57:52 UTC
(In reply to Nate Graham from comment #2)
> Is it unassigned, or disabled by default?

It is unassigned -- not present in .config/kglobalshortcutrc

> I think it would be best if we deleted that action and had these widgets set
> the Meta key as the launch shortcut on themselves.

But that would cause conflicts if there are multiple widgets, which should be pretty common given the popularity of multi-screen setups nowadays. The global-scope action can gracefully handle widgets on multiple screens -- it activates the widget on the current screen.

> Regardless, in addition to fixing this, I think we also need to rethink
> where exactly the shortcut is applied. Currently it can live on the widget
> itself or in a global-scope "Activate Application Launcher Widget" action.

The widget-level default shortcuts have been removed since https://invent.kde.org/plasma/plasma-desktop/-/commit/15eb76ef01764a111342037de5339f4dd9b182c7.
Comment 4 Nate Graham 2024-06-14 21:14:36 UTC
The problem with the global scope activation actions isn't that they exist, it's that local-scope activation actions also exist--creating a multiple-sources-of-truth problem and an opportunity for user confusion. And when a global scope activation action has a shortcut, the widget it affects looks like it has no shortcut set because the local-scope activation action in its config dialog has no shortcut.

A potential solution would be to make it so that setting a local scope shortcut for widgets secretly sets the shortcut on the global-scope action. So the same shortcut would then be shown in both places.
Comment 5 Nate Graham 2024-06-14 21:15:30 UTC
Either way, that's probably an unhelpful hijacking of this issue, which can be fixed in a simpler way by just setting the global-scope shortcut.
Comment 6 Alessandro Astone 2024-06-14 21:32:12 UTC
I should reiterate that the shortcut actually starts working after logout-and-login, so the default is set somewhere.
Comment 7 fanzhuyifan 2024-06-14 22:20:40 UTC
The problem seems to be the kconf update script `plasma6.0-remove-old-shortcuts` removing this shortcut after it is created.
Comment 8 Bug Janitor Service 2024-06-14 23:43:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4457
Comment 9 Bug Janitor Service 2024-06-14 23:43:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4457
Comment 10 Nate Graham 2024-06-17 14:39:25 UTC
Git commit 0d61e3ecca7122c0750502aa04f5381840cfbaa6 by Nate Graham, on behalf of Yifan Zhu.
Committed on 17/06/2024 at 14:39.
Pushed by ngraham into branch 'master'.

shell/kconf_update: don't remove shortcut added in 6.1

M  +1    -1    shell/kconf_update/plasma6.0-remove-old-shortcuts.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/0d61e3ecca7122c0750502aa04f5381840cfbaa6
Comment 11 Nate Graham 2024-06-17 14:55:53 UTC
Git commit 21856807387cb4be21f996f618021e35325b6209 by Nate Graham.
Committed on 17/06/2024 at 14:39.
Pushed by ngraham into branch 'Plasma/6.1'.

shell/kconf_update: don't remove shortcut added in 6.1


(cherry picked from commit 0d61e3ecca7122c0750502aa04f5381840cfbaa6)

Co-authored-by: Yifan Zhu <fanzhuyifan@gmail.com>

M  +1    -1    shell/kconf_update/plasma6.0-remove-old-shortcuts.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/21856807387cb4be21f996f618021e35325b6209