shell/kconf_update: don't remove shortcut added in 6.1

BUG: 488494


(cherry picked from commit 0d61e3ecca7122c0750502aa04f5381840cfbaa6)

Co-authored-by: Yifan Zhu <fanzhuyifan@gmail.com>