shell/kconf_update/plasma6.0-remove-old-shortcuts.cpp
@@ -48,7 +48,7 @@ int main(int argc, char **argv)
     filteredActionNames.erase(std::remove_if(filteredActionNames.begin(),
                                              filteredActionNames.end(),
                                              [allowedActionNames](const QString &str) {
-                                                 return str == QStringLiteral("_k_friendly_name")
+                                                 return str == QStringLiteral("_k_friendly_name") || str == QStringLiteral("activate application launcher")
                                                      || str.startsWith(QStringLiteral("activate task manager entry"))
                                                      || str.startsWith(QStringLiteral("activate widget")) || allowedActionNames.contains(str);
                                              }),
